<resources>
    <string name="app_name">Full Ride</string>
    <string name="API_KEY">AIzaSyAUklP2LEgUgNSf6S1AlWjq_JBqKxA4MsQ</string>
    <string name="Logout">Log Out</string>
    <string name="Sign_Google">Sign in with Google</string>
    <string name="forgot_pass">Forgot password</string>
    <string name="create_an_account">Create an account</string>
    <string name="password_example">password</string>
    <string name="example_email">example@gmail.com</string>
    <string name="welcome">Welcome to Full Ride!</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="back">back</string>
    <string name="reset_password">Enter your email to reset your password</string>
    <string name="submit">submit</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Major">FS Degree</string>
    <string name="monthly">Monthly Schedule</string>
    <string name="route">Aproximate route to Full Sail</string>
    <string name="add">Add Route</string>
    <string name="sch">Add Schedule</string>
    <string name="select">"Modify Monthly Schedule "</string>
    <string name="sel">Modify Monthly Schedule</string>
    <string name="mon">Monday</string>
    <string name="tus">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="to">to</string>
    <string name="tus2">Tuesday</string>
    <string name="wed2">Wednesday</string>
    <string name="thu2">Thursday</string>
    <string name="mr">Modify Route to Full Sail</string>
    <string name="acc">Accept</string>
    <string name="deny">Deny</string>
    <string name="join">You will be joining us as a...</string>
    <string name="driv">Driver</string>
    <string name="Rider">Rider</string>
    <string name="logout">Log Out</string>
    <string name="say_hi">Send message</string>
    <string name="title_location_permission">Grant Location Access</string>
    <string name="text_location_permission">Do you allow Full Ride to access your location?</string>
    <string name="ok">OK</string>
    <string name="lokf">Look for an approximate address</string>
    <string name="sendr">Send Request</string>
    <string name="reqdate">Please enter the date, time and building you are going to.</string>
    <string name="reqnnedac">Requests waiting for action</string>
    <string name="actedon">Requests acted on</string>
    <string name="sendm">Send Message</string>
    <string name="inf">The following map shows the user\'s location and Full Sail\'s . You will set your marker holding your finger on your starting point. If you make a mistake, click on the original marker to make it disappear and set a new one! For safety, starting point should be set as an approximate location, not your actual address. Additionally, when clicking on a marker, you will have the option to get directions to its location.</string>
    <string name="inf2">The following map shows a series of markers. Each marker represents the departing location of the user and will take you to their profile when being clicked.</string>
    <string name="ridd">Ride History</string>
</resources>