<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back"
    android:layout_height="match_parent">
    <ImageButton
        android:id="@+id/reset_back"
        android:layout_width="77dp"
        android:layout_height="66dp"
        android:background="#00FFFFFF"
        android:clickable="false"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        app:srcCompat="?attr/actionModeCloseDrawable"
        app:tint="@color/black"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/email_reset"
        android:layout_width="296dp"
        android:layout_height="59dp"
        android:layout_marginBottom="340dp"
        android:ems="10"
        android:hint="@string/example_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="#78909C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Reset_Textview"
        android:layout_width="318dp"
        android:layout_height="68dp"
        android:layout_marginTop="228dp"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reset_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/submit"
        android:textColor="#120B0B"
        app:backgroundTint="#F6A730"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_reset"
        app:layout_constraintVertical_bias="0.376"
        tools:ignore="TextContrastCheck,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>